test/parser/bad/keyword.ks
int main( int a )
{
    RETURN 0;
}
